--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/AntonioErdeljac/composable-functional-javascript#readme",
   "dependencies": {
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "immutable": "^3.8.2",
+    "immutable-ext": "^1.1.5"
   }
 }
